5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4478/executions/1667_2320.log
== TEST (2019-04-16 17:10:50) 
-- CODE:
nome = input("nome do bruxo:(HARRY/RONY) ")
if(nome.upper()==HARRY):
	print(2.9994/8.789)
else:
	print(1.674/10.789)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    if(nome.upper()==HARRY):
NameError: name 'HARRY' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 17:14:08) 
-- CODE:
nome = input("nome do bruxo:(HARRY/RONY) ")
bruxo = HARRY
if(nome.upper()==bruxo):
	print(2.9994/8.789)
else:
	print(1.674/10.789)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    bruxo = HARRY
NameError: name 'HARRY' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 17:14:39) 
-- CODE:
nome = input("nome do bruxo:(HARRY/RONY) ")
bruxo = harry
if(nome.upper()==bruxo):
	print(2.9994/8.789)
else:
	print(1.674/10.789)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    bruxo = harry
NameError: name 'harry' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 17:16:16) 
-- CODE:
nome = input("nome do bruxo:(HARRY/RONY) 
if(nome.upper()==HARRY):
	print(2.9994/8.789)
else:
	print(1.674/10.789)
-- ERROR:
File "XXXX", line 1
    nome = input("nome do bruxo:(HARRY/RONY) 
                                            ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 17:16:30) 
-- CODE:
nome = input("nome do bruxo:(HARRY/RONY) 
if(nome.upper()==HARRY):
	print(2.9994/8.789)
else:
	print(1.674/10.789)
-- ERROR:
File "XXXX", line 1
    nome = input("nome do bruxo:(HARRY/RONY) 
                                            ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 17:16:49) 
-- CODE:
nome = input("nome do bruxo:(HARRY/RONY) 
if(nome.upper()):
	print(2.9994/8.789)
else:
	print(1.674/10.789)
-- ERROR:
File "XXXX", line 1
    nome = input("nome do bruxo:(HARRY/RONY) 
                                            ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 17:17:20) 
-- CODE:
nome = input("nome do bruxo:(HARRY/RONY") 
if(nome.upper()):
	print(2.9994/8.789)
else:
	print(1.674/10.789)
-- OUTPUT:
0.3412674934577313
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 17:17:33) 
-- CODE:
nome = input("nome do bruxo:(HARRY/RONY)") 
if(nome.upper()):
	print(2.9994/8.789)
else:
	print(1.674/10.789)
-- OUTPUT:
0.3412674934577313
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 17:17:51) 
-- CODE:
nome = input("nome do bruxo:(HARRY/RONY)") 
if(nome.upper()):
	print(2.9994/8.789)
else:
	print(1.674/10.789)
-- EXECUTION TIME:
0.128678
-- TEST CASE 1:
---- input:
HARRY
---- correct output:
0.3412674934577313
---- user output:
0.3412674934577313
-- TEST CASE 2:
---- input:
RONY
---- correct output:
0.15515803132820466
---- user output:
0.3412674934577313
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 17:18:22) 
-- CODE:
nome = input("nome do bruxo:(HARRY/RONY)") 
if(nome.upper()=="HARRY"):
	print(2.9994/8.789)
else:
	print(1.674/10.789)
-- OUTPUT:
0.3412674934577313
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 17:18:30) 
-- CODE:
nome = input("nome do bruxo:(HARRY/RONY)") 
if(nome.upper()=="HARRY"):
	print(2.9994/8.789)
else:
	print(1.674/10.789)
-- EXECUTION TIME:
0.208793
-- TEST CASE 1:
---- input:
HARRY
---- correct output:
0.3412674934577313
---- user output:
0.3412674934577313
-- TEST CASE 2:
---- input:
RONY
---- correct output:
0.15515803132820466
---- user output:
0.15515803132820466
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
